# monitor

./: .gitattributes  .gitignore  Dockerfile  Dockerfile.dev  README copy.md  app.py  azure-pipelines.yml  pyproject.toml
config/: config.yaml  kql_templates.yaml
config/report_template/: ~$市場GAI使用状況.xlsx  市場GAI使用状況.xlsx  市場GAI打鍵履歴_YYYYMMDD.xlsx
core_analytics/command/: rebuild.py
core_analytics/config/: settings.py
core_analytics/control/: AppActivityMonitor.py
core_analytics/core/: interfaces.py  logging_config.py  models.py
core_analytics/model/: kql_builder.py  log_query.py
core_analytics/model/enums/: workspace_ids.py
core_analytics/model/repositories/: azure_blob_repository.py  azure_log_repository.py  file_repository.py
core_analytics/services/: analytics_service.py  cost_service.py  email_service.py  file_cleanup_service.py
core_analytics/services/query_strategies/: base_strategy.py  strategy_factory.py  stroke_count_strategy.py  user_count_strategy.py
core_analytics/view/: csv_utils.py  excel_utils.py
test/: daily_monitor_test_results_20251014_034134.json
test/command/: test_rebuild.py
test/model/: test_azure_blob_repository.py  test_fetch_and_process_data.py  test_file_repository.py  test_run_daily_monitor.py  test_upload_file.py
test/query/: daily_monitor_query_test.py  quick_auth_test.py
test/services/: test_file_cleanup_service.py
test/view/: create_excel_from_LogsQueryResult_data.py  create_excel_from_LogsQueryResult_test.py  generate_daily_report_test.py  generate_stroke_count_excel.py
(+2 files in other folders)
